kubernetes/yamls/secrets/secret-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: websec
  name: websec
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websec
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: websec
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged
        name: nginx
        volumeMounts:
          - name: foovol
            mountPath: "/usr/share/nginx/html/"
      volumes:
      - name: foovol
        secret:
          secretName: foo
