kubernetes/yamls/secrets/secret-deploy-svc-ing.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginxpod
  name: nginxpod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginxpod
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginxpod
    spec:
      containers:
      - image: nginx:1.24
        name: nginx
        volumeMounts:
          - name: foo
            mountPath: "/usr/share/nginx/html/"
      volumes:
      - name: foo
        secret:
           secretName: nginxsec
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginxpod
  name: nginxpod
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 80
  selector:
    app: nginxpod
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: nginxpod
spec:
  rules:
  - host: mylab.lan
    http:
      paths:
      - backend:
          service:
            name: nginxpod
            port:
              number: 9090
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
